[package]
name = "spin-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Solana related dependencies
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

# Anchor related dependencies
anchor-lang = "0.29"
borsh = "0.10"

# RocksDB dependencies
rocksdb = "0.22"
serde_with = "3.0"
rand = "0.8"

# SocketIoxide dependencies for real-time WebSocket support
socketioxide = "0.17"
tower = "0.5"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
